Fix an alignment issue.

--- a/theme/thss/style/core.css
+++ b/theme/thss/style/core.css
@@ -354,10 +354,6 @@ padding-bottom:2px;
 text-align:center;
 }
 
-#intro p {
-display:inline;
-}
-
 div.course_category_tree a {
 font-size:16px;
 font-weight:200;
